<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Health Care</string>
    <string name="about_title">Health Care</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="default_text_heart_rate">--</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Đo nhịp tim</item>
        <item >Chỉ số WHR</item>
        <item >Chỉ số BMI</item>
        <item >Lập lịch uống thuốc</item>
        <item >Đo số bước chạy</item>
        <item >Thông tin</item>
        <item >Trợ giúp</item>
        <item >Thoát</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/heartrate_icon</item>
        <item>@drawable/whr_icon</item>
        <item>@drawable/bmi_icon</item>
        <item>@drawable/timetable_icon</item>
        <item>@drawable/run_icon</item>
        <item>@drawable/info</item>
        <item>@drawable/help</item>
        <item>@drawable/exit_icon</item>
    </array>
   <!-- whr -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="lbCeString">Vòng eo (cm)</string>
    <string name="lbCmString">Vòng mông (cm)</string>
    <string name="cbMaleString">Nam</string>
    <string name="cbFeMaleString">Nữ</string>
    <string name="btnCalculateWHRString">Tính WHR</string>
    <string name="btnReinputString">Nhập lại</string>
    <string name="lbTitleWHRString">WHR</string>
    <string name="tbxResultWHRString">WHR</string>
    <string name="lbTitleResultWHRString">WHR của bạn:</string>
    <string name="lbNoteWHRString">Chú ý:\nSố đó vòng eo (bụng) được đo ở nơi nhỏ nhất của bụng, vòng mông được đo tại nơi to nhất của mông</string>
    <string name="tbxImpactString">Mức độ ảnh hưởng</string>
     <!-- bmi -->
    <string name="lbHeightString">Chiều cao (m)</string>
    <string name="lbWeightString">Cân nặng (kg)</string>
    <string name="btnCalculateBMIString">Tính BMI</string>
    <string name="lbTitleBMIString">BMI</string>
    <string name="tbxResultBMIString">BMI</string>
    <string name="lbTitleResultBMIString">BMI của bạn:</string>
    <string name="cbWHOString">WHO</string>
    <string name="cbIDIAndWPROString">IDI And WPRO</string>
    <string name="lbNoteBMIString">Chú ý:\nChỉ số BMI không áp dụng cho người mới ốm dậy, phụ nữ mang thai và vận động viên thể hình</string>
    <string name="tbvCoutString">Phần mềm chăm sóc sức khỏe xin chào các bạn\n
        chọn chức năng bên trái để sử dụng phần mềm</string>
    <!-- step run -->
    <string name="btnStartCountStepRun">Bắt đầu</string>
    <string name="btnStopCountStepRun">Dừng</string>
    <string name="btnResetCountStepRun">Thiết lập lại</string>
    <string name="txtHeartRateStatusString">Nhịp tim</string>
    <string name="txtStepRunStatusString">Bước chạy</string>
    <string name="txtBMIStatusString">Chỉ số BMI</string>
    <string name="txtWHRStatusString">Chỉ số WHR</string>
    <string name="txtTargetsString">Chỉ tiêu</string>
    <string name="txtTodayString">Hôm nay</string>
    <string name="txtStartString">Chỉ số WHR</string>
    <string name="txtYesterdayString">Hôm qua</string>
    
    <!-- timetable -->
    <string name="txtSickString">Tên bệnh</string>
    <string name="txtDateSicString">Ngày bệnh</string>
    <string name="txtStatusString">Tình trạng bệnh</string>
    <string name="txtTimeStartString">Ngày bắt đầu</string>
    <string name="txtCountTimeString">Số lần</string>
    <string name="txtTimeSpacingString">Khoảng cách uống</string>
    <string name="txtStatusFinishString">Khỏi</string>
    <string name="txtNotFinishString">Chưa khỏi</string>
    <string name="buttonSaveString">Lưu lại</string>
    <string name="buttonDeleteString">Xóa</string>
    <!-- about -->
    <string name="aboutContent">Vấn đề trọng tâm trong chăm sóc sức khỏe là thể chất, ngoài việc ăn uống điều độ cần có sự theo dõi thể trạng thường xuyên là điều cần thiết. Health Care giúp bạn theo dõi thường xuyên các chỉ số BMI (cân nặng, chiều cao), WHR (vòng eo/vòng mông), theo dõi quá trình tập thể dục (đo số bước đi trong ngày) và lập lịch uống thuốc. Sử dụng Health Care để có thể chăm sóc sức khỏe không cần một thiết bị hỗ trợ nào khác, tối ưu hóa sự tập luyện và theo dõi sự tiến bộ của bạn</string>
    
</resources>
