<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="62dp"
        android:text="@string/lbHeightString" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tbxWeight"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/lbWeightString" />

    <EditText
        android:id="@+id/tbxWeight"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tbxHeight"
        android:layout_below="@+id/tbxHeight"
        android:layout_marginTop="15dp"
        android:ems="10" />

    <EditText
        android:id="@+id/tbxHeight"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tbxHeight"
        android:layout_centerHorizontal="true"
        android:text="@string/lbTitleBMIString"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tbxNoteBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tbxResultBMI"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tbxWeight"
        android:layout_marginBottom="14dp"
        android:text="@string/lbNoteBMIString" />

    <TextView
        android:id="@+id/tbxImpact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tbxNoteBMI"
        android:layout_alignLeft="@+id/tbxNoteBMI"
        android:layout_marginBottom="21dp"
        android:text="@string/tbxImpactString" />

    <TextView
        android:id="@+id/tbxResultBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tbxImpact"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/tbxResultBMIString"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tbxResultBMI"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/lbTitleResultBMIString" />

    <CheckBox
        android:id="@+id/cbWHO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/tbxWeight"
        android:text="@string/cbWHOString" />

    <CheckBox
        android:id="@+id/cbIDIAndWPRO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbWHO"
        android:layout_below="@+id/cbWHO"
        android:text="@string/cbIDIAndWPROString" />

    <Button
        android:id="@+id/btnCalculateBMI"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnReinput"
        android:layout_alignBottom="@+id/btnReinput"
        android:layout_toLeftOf="@+id/tbxWeight"
        android:text="@string/btnCalculateBMIString" />

    <Button
        android:id="@+id/btnReinput"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tbxWeight"
        android:layout_below="@+id/cbIDIAndWPRO"
        android:layout_marginLeft="21dp"
        android:text="@string/btnReinputString" />

</RelativeLayout>