<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whr" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="62dp"
        android:text="@string/lbCeString"
        android:textColor="#0066CC" />

    <TextView
        android:id="@+id/tbxImpact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tbxResultWHR"
        android:layout_below="@+id/tbxResultWHR"
        android:text="@string/tbxImpactString"
        android:textColor="#FF3333"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/tbxCe"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="23dp"
        android:layout_toRightOf="@+id/tbxImpact"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/cbFeMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tbxCm"
        android:layout_below="@+id/tbxCm"
        android:layout_marginTop="5dp"
        android:button="@drawable/checkbox_style"
        android:text="@string/cbFeMaleString" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/lbTitleWHRString"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0066CC"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tbxResultWHR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginTop="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/tbxResultWHRString"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF3333"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tbxCm"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tbxCe"
        android:layout_below="@+id/tbxCe"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tbxCm"
        android:layout_alignBottom="@+id/tbxCm"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/lbCmString"
        android:textColor="#0066CC" />

    <CheckBox
        android:id="@+id/cbMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cbFeMale"
        android:layout_alignBottom="@+id/cbFeMale"
        android:layout_alignRight="@+id/tbxCm"
        android:layout_marginRight="16dp"
        android:button="@drawable/checkbox_style"
        android:text="@string/cbMaleString" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/btnCalculateWHR"
        android:text="@string/lbTitleResultWHRString"
        android:textColor="#0066CC" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tbxImpact" 
        android:layout_margin="10dp" >

        <TableLayout
            android:id="@+id/tableDataWHR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:padding="10dp"
            android:shrinkColumns="*"
            android:stretchColumns="*" >
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnCalculateWHR"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnReinput"
        android:layout_alignBottom="@+id/btnReinput"
        android:layout_toLeftOf="@+id/tbxCe"
        android:background="@drawable/button_style"
        android:text="@string/btnCalculateWHRString" />

    <Button
        android:id="@+id/btnReinput"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbFeMale"
        android:layout_toRightOf="@+id/textView3"
        android:background="@drawable/button_style"
        android:text="@string/btnReinputString" />

</RelativeLayout>