<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/steprun" >

    <TextView
        android:id="@+id/tbxYesterday"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tbxCountStepRun"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/tbxChiTieu"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView05"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tbxCountStepRun"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tbxYesterday"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tbxCountStepRun"
        android:layout_alignBottom="@+id/tbxCountStepRun"
        android:layout_alignLeft="@+id/TextView03"
        android:text="@string/txtTodayString"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tbxChiTieu"
        android:layout_alignBottom="@+id/tbxChiTieu"
        android:layout_alignLeft="@+id/TextView05"
        android:text="@string/txtTargetsString"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/tbxYesterday"
        android:text="@string/txtYesterdayString"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp" >

        <TableLayout
            android:id="@+id/tableDataStepRun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:padding="10dp"
            android:shrinkColumns="*"
            android:stretchColumns="*" >
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnStopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStartService"
        android:layout_alignBottom="@+id/btnStartService"
        android:layout_toRightOf="@+id/TextView05"
        android:background="@drawable/button_style"
        android:text="@string/btnStopCountStepRun" />

    <Button
        android:id="@+id/btnStartService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scrollView1"
        android:layout_alignRight="@+id/TextView02"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_style"
        android:text="@string/btnStartCountStepRun" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStopService"
        android:layout_alignBottom="@+id/btnStopService"
        android:layout_alignRight="@+id/scrollView1"
        android:background="@drawable/button_style"
        android:text="@string/btnResetCountStepRun" />

</RelativeLayout>